force-app/main/default/objects/Contact/fields/Breakfast__c.field-meta.xml
<CustomField>
    <fullName>Breakfast__c</fullName>
    <inlineHelpText>Enter what you would like for breakfast.</inlineHelpText>
    <label>Breakfast</label>
    <length>255</length>
    <type>Text</type>
</CustomField>