force-app/main/default/objects/Contact/fields/Dinner__c.field-meta.xml
<CustomField>
    <fullName>Dinner__c</fullName>
    <inlineHelpText>Enter what you would like for dinner.</inlineHelpText>
    <label>Dinner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>