force-app/main/default/objects/Contact/fields/Lunch__c.field-meta.xml
<CustomField>
    <fullName>Lunch__c</fullName>
    <inlineHelpText>Enter what you would like for lunch.</inlineHelpText>
    <label>Lunch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>